tests/snapshots/examples_fixtures/type_system__failing__77_hm_logical_non_bool_compile_mismatch.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/77_hm_logical_non_bool_compile_mismatch.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E300]: TYPE UNIFICATION ERROR

Cannot unify Bool operands with Int and Bool.

  --> examples/type_system/failing/77_hm_logical_non_bool_compile_mismatch.flx:2:5
  |
2 |     a && b
  |     ^^^^^^
  |     ------ expected Bool operands, found Int and Bool
  |     ------ operator operands are known at compile time

Help:
  adjust operand types or add explicit conversion


--> compiler error[E300]: TYPE UNIFICATION ERROR

Cannot unify Int with Bool.

  --> examples/type_system/failing/77_hm_logical_non_bool_compile_mismatch.flx:2:5
  |
2 |     a && b
  |     ^^^^^^
  |     ------ expected Int, found Bool

Found 2 errors.
== stdout ==
<not executed>
